Fix the crazy scrollbars.

--- a/src/styles/components/weight-form.scss
+++ b/src/styles/components/weight-form.scss
@@ -1,6 +1,6 @@
 #cn-weight-form {
   flex: 9;
-  overflow-y: scroll;
+  overflow-y: hidden;
   overflow-x: hidden;
 
   #cn-weight-form-instructions {
