--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -118,8 +118,8 @@ body {
     bottom: 0;
     right: 0;
     left: 0;
-    overflow-x: scroll;
-    overflow-y: scroll;
+    overflow-x: auto;
+    overflow-y: auto;
   }
 }
 
