--- a/src/styles/views/syllabus-tool.scss
+++ b/src/styles/views/syllabus-tool.scss
@@ -13,7 +13,7 @@
     flex-direction: column;
     padding-right: 1em;
     padding-left: 1em;
-    overflow-y: scroll;
+    overflow-y: hidden;
 
     @include breakpoint(medium) {
       flex-direction: row;
@@ -37,7 +37,7 @@
         }
         .cn-section-content {
           background-color: #e8f3fd;
-          overflow-y: scroll;
+          overflow-y: auto;
           padding: 1em;
           padding-bottom: 0;
 
